<resources>
    <string name="app_name">Компьютерная механика</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_nwe_str">New str</string>
    <string name="lastr_try">HELLOOOOO</string>
    <string name="Sigma">Sigma</string>
    <string name="E">E</string>
    <string name="b">b</string>
    <string name="L">L</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="submit_list">Submit List</string>
    <string name="show_list_data">Show List Data</string>
    <string name="rods_input">Rods Input</string>
</resources>