<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/rods_input"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_baseline_add_24"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_remove"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:drawableEnd="@drawable/ic_baseline_remove_24"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_submit_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/submit_list"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_show_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/show_list_data"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>